Change application title

--- a/static/leaderboard.html
+++ b/static/leaderboard.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
  
 <head>
-    <title>Postmates Racing</title> 
+    <title>Race Condition</title> 
 
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="leaderboard.css" rel="stylesheet">
@@ -24,7 +24,7 @@
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Postmates Racing</h3>
+            <h3 class="text-muted">Race Condition</h3>
         </div>
  
         <div class="row">
