--- a/static/courseMap.html
+++ b/static/courseMap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Postmates Racing</title> 
+    <title>Race Condition</title> 
 
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="leaderboard.css" rel="stylesheet">
@@ -23,7 +23,7 @@
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Postmates Racing</h3>
+            <h3 class="text-muted">Race Condition</h3>
         </div>
 <!--
 <div class="col-sm-6">   
