--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
  
 <head>
-    <title>Postmates Racing</title>
+    <title>Race Condition</title>
  
  
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Postmates Racing</h3>
+            <h3 class="text-muted">Race Condition</h3>
         </div>
  
         <div class="jumbotron">
